--- a/pytest.ini
+++ b/pytest.ini
@@ -4,4 +4,5 @@ testpaths = tests
 markers =
     smoke: critical smoke tests
     regression: full regression suite
+addopts = --html=reports/report.html --self-contained-html
 
