Enable machine-readable test results and add failure analyzer entry point

--- a/pytest.ini
+++ b/pytest.ini
@@ -4,5 +4,7 @@ testpaths = tests
 markers =
     smoke: critical smoke tests
     regression: full regression suite
-addopts = --html=reports/report.html --self-contained-html
+addopts = --html=reports/report.html --self-contained-html --junitxml=reports/results.xml
+
+
 
